--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
     <ul class="nav-links">
       <li><a href="#o-mne">O mně</a></li>
       <li><a href="#terapie">Formy terapie</a></li>
-      <li><a href="#prubeh">Průběh</a></li>
+      <li><a href="#prubeh">Dotazy</a></li>
       <li><a href="#cenik">Ceník</a></li>
       <li><a href="#kontakt" class="nav-btn">Objednat se</a></li>
     </ul>
@@ -570,31 +570,42 @@ Mým hlavním terapeutickým směrem je kognitivně-behaviorální terapie (KBT)
 
 <section id="prubeh">
   <div class="container">
-    <h2>Jak terapie probíhá</h2>
-    <div class="card-grid">
-      <div class="card">
-        <h3>1. Objednání</h3>
-        <p>Objednat se můžete prostřednictvím online objednávkového systému nebo e-mailem, kde krátce popište, co Vás trápí a proč do terapie chcete vstoupit. Pokud si nejste jistí, zda je terapie pro vás vhodná, můžete mě před objednáním kontaktovat s dotazem.</p>
-      </div>
-      <div class="card">
-        <h3>2. První sezení</h3>
-        <p>První setkání slouží především k vzájemnému seznámení a k porozumění tomu, s čím do terapie přicházíte. Úvodní sezení se liší od sezení návazných. Společně se seznámíme, probereme vaše aktuální obtíže, očekávání a cíle terapie. </p>
-      </div>
-      <div class="card">
-        <h3>3. Další průběh terapie</h3>
-        <p>V dalších sezeních se zaměřujeme na konkrétní témata, která jsou pro vás důležitá. Někdy se  terapeutické cíle objeví hned na začátku, jindy se o nich bavíme více sezení. Pokud přemýšlíte nad tím, že konkrétní cíle nemáte, nemusíte se bát, vše stanovíme společně. </p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section id="prubeh-faq" style="background:#faf8f4">
-  <div class="container">
-    <h2>Jak terapie probíhá — časté otázky</h2>
+    <h2>Jak terapie probíhá — časté dotazy</h2>
     <div class="card-grid accordion">
       <div class="card">
         <button class="toggle" aria-expanded="false">
-          <span>Délka a frekvence sezení?</span>
+          <span>Jak se můžu objednat na sezení?</span>
+          <span class="arrow">▾</span>
+        </button>
+        <div class="panel">
+          <div class="chat-bubble">Objednat se můžete prostřednictvím online objednávkového systému nebo e-mailem. V e-mailu můžete krátce popsat, co vás trápí a s čím do terapie přicházíte. Pokud je pro vás obtížné věci slovně pojmenovat, nemusíte se obávat – vše potřebné probereme na prvním sezení.
+
+Do 48 hodin od odeslání e-mailu nebo objednání přes web obdržíte odpověď s návrhem termínu a základními informacemi k sezení. Pokud si nejste jisti, zda je terapie pro vás vhodná, můžete mě před objednáním kontaktovat s dotazem.</div>
+        </div>
+      </div>
+      <div class="card">
+        <button class="toggle" aria-expanded="false">
+          <span>Jak vypadá první sezení?</span>
+          <span class="arrow">▾</span>
+        </button>
+        <div class="panel">
+          <div class="chat-bubble">První setkání slouží především k vzájemnému seznámení a k porozumění tomu, s čím do terapie přicházíte. Společně probereme vaše aktuální obtíže, očekávání a cíle terapie. Zároveň budete mít prostor zeptat se na vše, co vás k terapii zajímá.</div>
+        </div>
+      </div>
+      <div class="card">
+        <button class="toggle" aria-expanded="false">
+          <span>Jak to probíhá v dalších terapeutických sezeních?</span>
+          <span class="arrow">▾</span>
+        </button>
+        <div class="panel">
+          <div class="chat-bubble">V dalších sezeních se zaměřujeme na témata, která jsou pro vás aktuálně důležitá. Někdy jsou terapeutické cíle jasné hned od začátku, jindy se vyjasňují postupně – obě varianty jsou v pořádku.
+
+V průběhu sezení pracujeme s myšlenkami, emocemi i chováním v každodenních situacích a hledáme cesty, které mohou vést ke změně obtíží a ke změně v běžném fungování. Tempo i zaměření terapie vždy přizpůsobuji vašim potřebám a možnostem. Na konci sezení se společně krátce zastavujeme u toho, jak pro vás setkání bylo, aby bylo možné terapii dále přizpůsobovat vám na míru.</div>
+        </div>
+      </div>
+      <div class="card">
+        <button class="toggle" aria-expanded="false">
+          <span>Jak často budu na sezení docházet?</span>
           <span class="arrow">▾</span>
         </button>
         <div class="panel">
@@ -603,40 +614,63 @@ Mým hlavním terapeutickým směrem je kognitivně-behaviorální terapie (KBT)
       </div>
       <div class="card">
         <button class="toggle" aria-expanded="false">
-          <span>Jaké jsou používané přístupy?</span>
+          <span>Jak probíhá online terapie?</span>
           <span class="arrow">▾</span>
         </button>
         <div class="panel">
-          <div class="chat-bubble">Mým základním terapeutickým směrem je kognitivně-behaviorální terapie (KBT), avšak kombinuji ho i s dalšími terapeutickými směry. V případě potřeby lze terapii doplnit o další metody, například EMDR nebo klinickou hypnózu. Volba přístupu vždy vychází ze společné domluvy a z toho, co je pro vás v dané chvíli nejvhodnější.</div>
+          <div class="chat-bubble">Online terapie probíhá formou zabezpečeného videohovoru a je plnohodnotnou alternativou osobního setkání. Je vhodná zejména v situacích, kdy není možné docházet osobně nebo pokud vám tento způsob kontaktu více vyhovuje.</div>
         </div>
       </div>
       <div class="card">
         <button class="toggle" aria-expanded="false">
-          <span>Je terapie důvěrná a bezpečná?</span>
+          <span>Kdo má přístup k informacím, které Vám sdělím?</span>
           <span class="arrow">▾</span>
         </button>
         <div class="panel">
-          <div class="chat-bubble">Ano, dodržuji etické zásady a mlčenlivost; vše, co na sezení probíráme, zůstává mezi námi, pokud neexistuje zákonná povinnost oznámit riziko.</div>
+          <div class="chat-bubble">Informace sdílené v terapii podléhají mlčenlivosti a jsou zpracovávány v souladu s etickými zásadami psychologické profese. Bezpečný a respektující přístup je základním předpokladem terapeutické spolupráce.</div>
         </div>
       </div>
+
       <div class="card">
         <button class="toggle" aria-expanded="false">
-          <span>Je možná Online terapie?</span>
+          <span>Co když budu potřebovat sezení zrušit nebo přesunout?</span>
           <span class="arrow">▾</span>
         </button>
         <div class="panel">
-          <div class="chat-bubble">Ano, Online terapie probíhá formou zabezpečeného videohovoru a je plnohodnotnou alternativou osobního setkání. Je vhodná zejména v situacích, kdy není možné docházet osobně nebo pokud vám tento způsob kontaktu více vyhovuje.</div>
+          <div class="chat-bubble">Pokud potřebujete sezení zrušit nebo přesunout, dejte mi prosím vědět co nejdříve. Při zrušení méně než 24 hodin před domluveným termínem je účtována plná cena sezení. Podrobnosti jsou uvedeny ve storno podmínkách.</div>
         </div>
       </div>
+
       <div class="card">
         <button class="toggle" aria-expanded="false">
-          <span>Komu můžu pomoci?</span>
+          <span>Co když si nejsem jistý/á, že mi terapie pomáhá?</span>
           <span class="arrow">▾</span>
         </button>
         <div class="panel">
-          <div class="chat-bubble">Pracuji s dospívajícími (od 15 let), dospělými a seniory</div>
+          <div class="chat-bubble">Pochybnosti jsou běžnou součástí terapeutického procesu. Je v pořádku o nich mluvit přímo v terapii. Společně se můžeme zastavit u toho, co vám terapie přináší, a rozhodnout, co dál — pokračovat nebo práci upravit.</div>
         </div>
       </div>
+
+      <div class="card">
+        <button class="toggle" aria-expanded="false">
+          <span>Mohu terapii kdykoliv ukončit?</span>
+          <span class="arrow">▾</span>
+        </button>
+        <div class="panel">
+          <div class="chat-bubble">Ano. Terapie je dobrovolná a můžete ji kdykoliv ukončit. Vhodné je o ukončení mluvit otevřeně, ideálně s prostorem pro společné uzavření spolupráce.</div>
+        </div>
+      </div>
+
+      <div class="card">
+        <button class="toggle" aria-expanded="false">
+          <span>Je terapie hrazená pojišťovnou?</span>
+          <span class="arrow">▾</span>
+        </button>
+        <div class="panel">
+          <div class="chat-bubble">Nemám uzavřenou smlouvu se zdravotními pojišťovnami; sezení si klient hradí sám.</div>
+        </div>
+      </div>
+
       <div class="card">
         <button class="toggle" aria-expanded="false">
           <span>S čím Vám mohu pomoci?</span>
@@ -663,6 +697,8 @@ a další…
     </div>
   </div>
 </section>
+
+
 
 <section style="background:#fdfbf8" id="cenik">
   <div class="container">
