--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Psycholog | Individuální terapie</title>
+  <title>Psycholog | Mgr. Lenka Zítková</title>
+  <!-- Favicon (uses existing logo) -->
+  <link rel="icon" href="images/logo_pruhledne.png" type="image/png" />
+  <link rel="apple-touch-icon" href="images/logo_pruhledne.png" />
   <style>
     :root {
       /* Barvy odvozené z loga */
