--- a/index.html
+++ b/index.html
@@ -470,6 +470,31 @@
         grid-template-columns: 1fr;
       }
     }
+
+    /* Nav toggle (desktop hidden, mobile visible) */
+    .nav-toggle { display: none; background: none; border: 0; font-size:1.2rem; padding:0.25rem 0.5rem; cursor: pointer; color: var(--accent); z-index:10001; }
+
+    @media (max-width: 720px) {
+      .nav-toggle { display:inline-flex; margin-left: auto; background: transparent; border:0; width:40px; height:40px; align-items:center; justify-content:center; font-size:1.3rem; cursor:pointer; color:var(--accent); }
+      .nav-inner { gap: 8px; }
+      .nav-logo { width: 140px; }
+      .nav-links{
+        position: absolute;
+        top: var(--nav-height);
+        left: 0;
+        right: 0;
+        display: none;
+        flex-direction: column;
+        padding: 0.5rem 1rem;
+        gap: 0.25rem;
+        background: var(--bg-light);
+        border-bottom: 1px solid #e9e6e2;
+        z-index: 9998;
+      }
+      .nav.open .nav-links { display:flex; }
+      .nav-links li { display:block; width:100%; }
+      .nav-links li a { display:block; padding: 0.75rem 0.5rem; width:100%; }
+    }
   </style>
 </head>
 <body>
@@ -477,7 +502,8 @@
 <nav class="nav">
   <div class="container nav-inner">
     <div class="nav-logo"></div>
-    <ul class="nav-links">
+    <button class="nav-toggle" type="button" aria-expanded="false" aria-label="Otevřít menu">☰</button>
+    <ul class="nav-links" id="navLinks">
       <li><a href="#o-mne">O mně</a></li>
       <li><a href="#terapie">Formy terapie</a></li>
       <li><a href="#prubeh">Dotazy</a></li>
@@ -486,6 +512,9 @@
     </ul>
   </div>
 </nav>
+
+
+
 
 <header>
   <div class="container hero">
@@ -1082,7 +1111,37 @@ Provozuji odborné psychologické služby jako fyzická osoba podnikající na z
         lastScroll = current;
       }, { passive: true });
     })();
-    
+
+    // Responsive nav toggle (mobile)
+    (function(){
+      const navEl = document.querySelector('.nav');
+      const toggle = document.querySelector('.nav-toggle');
+      const links = document.querySelectorAll('.nav-links a');
+      if (!navEl || !toggle) return;
+      toggle.addEventListener('click', () => {
+        const isOpen = navEl.classList.toggle('open');
+        toggle.setAttribute('aria-expanded', isOpen ? 'true' : 'false');
+        if (isOpen) {
+          document.body.style.overflow = 'hidden';
+        } else {
+          document.body.style.overflow = '';
+        }
+      });
+      links.forEach(a => a.addEventListener('click', () => {
+        if (!navEl.classList.contains('open')) return;
+        navEl.classList.remove('open');
+        toggle.setAttribute('aria-expanded','false');
+        document.body.style.overflow = '';
+      }));
+      window.addEventListener('resize', () => {
+        if (window.innerWidth > 720 && navEl.classList.contains('open')) {
+          navEl.classList.remove('open');
+          if (toggle) toggle.setAttribute('aria-expanded','false');
+          document.body.style.overflow = '';
+        }
+      });
+    })();
+
     function sendMail(e){
       e.preventDefault();
       const form = e.target;
