--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Psycholog | Mgr. Lenka Zítková</title>
+  <meta name="description" content="Mgr. Lenka Zítková - klinická psycholožka nabízející psychologické poradenství a terapii pro dospívající a dospělé. Specializace na kognitivně-behaviorální terapii, EMDR a klinickou hypnózu." />
+  <meta name="keywords" content="psycholog, psychoterapie, kognitivně-behaviorální terapie, úzkost, deprese, stres, syndrom vyhoření, trauma, Lenka Zítková, psycholog Praha" />
+  <meta name="author" content="Mgr. Lenka Zítková" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://www.psychologzitkova.cz/" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.psychologzitkova.cz/" />
+  <meta property="og:title" content="Psycholog | Mgr. Lenka Zítková" />
+  <meta property="og:description" content="Klinická psycholožka nabízející psychologické poradenství a terapii. Specializace na KBT, EMDR a hypnózu pro dospívající a dospělé." />
+  <meta property="og:image" content="https://www.psychologzitkova.cz/images/logo_pruhledne.png" />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.psychologzitkova.cz/" />
+  <meta property="twitter:title" content="Psycholog | Mgr. Lenka Zítková" />
+  <meta property="twitter:description" content="Klinická psycholožka nabízející psychologické poradenství a terapii. Specializace na KBT, EMDR a hypnózu." />
+  <meta property="twitter:image" content="https://www.psychologzitkova.cz/images/logo_pruhledne.png" />
   <!-- Favicon (uses existing logo) -->
   <link rel="icon" href="images/logo_pruhledne.png" type="image/png" />
   <link rel="apple-touch-icon" href="images/logo_pruhledne.png" />
@@ -672,6 +689,36 @@
     }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Mgr. Lenka Zítková",
+    "jobTitle": "Klinická psycholožka",
+    "description": "Psycholožka ve zdravotnictví, frekventantka výcviku v kognitivně-behaviorální terapii, klinická hypnoterapeutka. Nabízí psychologické poradenství a terapii pro dospívající a dospělé.",
+    "url": "https://www.psychologzitkova.cz/",
+    "image": "https://www.psychologzitkova.cz/images/logo_pruhledne.png",
+    "sameAs": [],
+    "knowsAbout": [
+      "Kognitivně-behaviorální terapie",
+      "EMDR",
+      "Klinická hypnóza",
+      "Úzkostné poruchy",
+      "Depresivní poruchy",
+      "Stres management",
+      "Syndrom vyhoření",
+      "Traumatické zkušenosti"
+    ],
+    "hasOccupation": {
+      "@type": "Occupation",
+      "name": "Psycholog",
+      "occupationLocation": {
+        "@type": "Country",
+        "name": "Česká republika"
+      }
+    }
+  }
+  </script>
 </head>
 <body>
 
