--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Psycholog | Mgr. Lenka Zítková</title>
   <meta name="description" content="Mgr. Lenka Zítková - klinická psycholožka nabízející psychologické poradenství a terapii pro dospívající a dospělé. Specializace na kognitivně-behaviorální terapii, EMDR a klinickou hypnózu." />
-  <meta name="keywords" content="psycholog, psychoterapie, kognitivně-behaviorální terapie, úzkost, deprese, stres, syndrom vyhoření, trauma, Lenka Zítková, psycholog Praha" />
+  <meta name="keywords" content="psycholog, psychoterapie, kognitivně-behaviorální terapie, úzkost, deprese, stres, syndrom vyhoření, trauma, Lenka Zítková, psycholog Zlín" />
   <meta name="author" content="Mgr. Lenka Zítková" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://www.psychologzitkova.cz/" />
@@ -698,6 +698,13 @@
     "description": "Psycholožka ve zdravotnictví, frekventantka výcviku v kognitivně-behaviorální terapii, klinická hypnoterapeutka. Nabízí psychologické poradenství a terapii pro dospívající a dospělé.",
     "url": "https://www.psychologzitkova.cz/",
     "image": "https://www.psychologzitkova.cz/images/logo_pruhledne.png",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Zlín",
+      "addressCountry": "CZ"
+    },
+    "telephone": "+420607073067",
+    "email": "zitkova.le@gmail.com",
     "sameAs": [],
     "knowsAbout": [
       "Kognitivně-behaviorální terapie",
